Renamed pymem.py to initialize.py

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-ROOT_PATH=
-SECRET=secretkey
+ROOT_PATH=   # Example: /usr/local/mirrormanager/storage
+SECRET=      # Example: jbgeou4ht8o3fignfddoinvifb
+SENTRY_DSN=  # Example: https://<key>@error-tracking.example.com/1
