Worked more on File downloading

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ROOT_PATH=   # Example: /usr/local/mirrormanager/storage
 SECRET=      # Example: jbgeou4ht8o3fignfddoinvifb
 SENTRY_DSN=  # Example: https://<key>@error-tracking.example.com/1
+DOWNLOAD_WORKERS=5
