--- a/.gitignore
+++ b/.gitignore
@@ -149,7 +149,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# pytype static type analyzer
+# pytype Static type analyzer
 .pytype/
 
 # Cython debug symbols
